--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@prisma/client": "^6.14.0",
+    "@tanstack/react-table": "^8.21.3",
     "next": "15.4.6",
     "prisma": "^6.14.0",
     "react": "19.1.0",
