--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
